# cmake-opengl-boilerplate

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
SOIL2/: CMakeLists.txt
cmake/: SOIL2.cmake  gl3w.cmake  glfw.cmake  glm.cmake
cmake/modules/: FindGL3W.cmake  FindGLFW.cmake  FindGLM.cmake  FindSOIL2.cmake
src/: CMakeLists.txt  example.cpp
